Fixing the mobile overflow of prompt 4's label on the purpose page

--- a/src/components/prompt-template/index.module.scss
+++ b/src/components/prompt-template/index.module.scss
@@ -17,6 +17,11 @@ label {
   top: 1rem;
   left: 1rem;
   transition: 0.2s;
+  font-size: 0.7rem;
+
+  @media (min-width: 800px) {
+    font-size: 1rem;
+  }
 }
 
 .testdiv {
